<resources>
    <string name="app_name">HouseControl</string>
    <string name="kitchen">KITCHEN</string>
    <string name="bedroom">BEDROOM</string>
    <string name="livingroom">LIVING ROOM</string>
    <string name="bathroom">BATHROOM</string>
    <string name="garage">GARAGE</string>
    <string name="television">TELEVISION</string>
    <string name="all_on">ALL ON</string>
    <string name="all_off">ALL OFF</string>
    <string name="artificialsun">ARTIFICIAL SUN</string>
    <string name="sunrise_header">SUNRISE EDITOR</string>
    <string name="add_item">ADD SUNRISE</string>
    <string name="remove_item">REMOVE SUNRISE</string>
    <string name="sunrise_info_day">DAY</string>
    <string name="sunrise_info_hour">HOUR SET</string>
    <string name="sunrise_info_type">TYPE</string>
    <string name="sunrise_info_location">LOCATION</string>
    <string name="sunrise_weekday_monday">MONDAY</string>
    <string name="sunrise_weekday_tuesday">TUESDAY</string>
    <string name="sunrise_weekday_wednesday">WEDNESDAY</string>
    <string name="sunrise_weekday_thursday">THURSDAY</string>
    <string name="sunrise_weekday_friday">FRIDAY</string>
    <string name="sunrise_weekday_saturday">SATURDAY</string>
    <string name="sunrise_weekday_sunday">SUNDAY</string>
    <string name="sunrise_type_fast">FAST</string>
    <string name="sunrise_type_normal">NORMAL</string>
    <string name="sunrise_type_slow">SLOW</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="sunrise_editor_inputText_hint">VALUE</string>
    <string name="sunrise_editor_done">DONE</string>
    <string name="sunrise_editor_cancel">CANCEL</string>
    <string name="null_value">NULL</string>
</resources>