<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id = "@+id/sunrise_editor_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sunrise_editor_day"
        style="@style/sunrise_textview"
        android:text="@string/sunrise_info_day"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sunrise_editor_hourSet"
        style="@style/sunrise_textview"
        android:text="@string/sunrise_info_hour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/sunrise_editor_type"
        style="@style/sunrise_textview"
        android:text="@string/sunrise_info_type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/sunrise_editor_location"
        style="@style/sunrise_textview"
        android:text="@string/sunrise_info_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <EditText
        android:id="@+id/editText_day"
        style="@style/sunrise_editor_text_input"
        app:layout_constraintBottom_toTopOf="@+id/sunrise_editor_hourSet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sunrise_editor_day" />

    <EditText
        android:id="@+id/editText_hourSet"
        style="@style/sunrise_editor_text_input"
        app:layout_constraintBottom_toTopOf="@+id/sunrise_editor_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sunrise_editor_hourSet" />

    <EditText
        android:id="@+id/editText_type"
        style="@style/sunrise_editor_text_input"
        app:layout_constraintBottom_toTopOf="@+id/sunrise_editor_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sunrise_editor_type" />

    <EditText
        android:id="@+id/editText_location"
        style="@style/sunrise_editor_text_input"
        app:layout_constraintBottom_toTopOf="@+id/sunrise_editor_done_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sunrise_editor_location" />

    <Button
        android:id="@+id/sunrise_editor_done_button"
        style="@style/button_style"
        android:text="@string/sunrise_editor_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/sunrise_editor_cancel_button"
        style="@style/button_style"
        android:text="@string/sunrise_editor_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>