<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/kitchen_textview"
        style="@style/textview_style"
        android:text="@string/kitchen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/bedroom_textview"
        style="@style/textview_style"
        android:text="@string/bedroom"
        app:layout_constraintEnd_toEndOf="@+id/kitchen_textview"
        app:layout_constraintStart_toStartOf="@+id/kitchen_textview"
        app:layout_constraintTop_toBottomOf="@+id/kitchen_textview" />

    <TextView
        android:id="@+id/livingroom_textview"
        style="@style/textview_style"
        android:text="@string/livingroom"
        app:layout_constraintEnd_toEndOf="@+id/bedroom_textview"
        app:layout_constraintStart_toStartOf="@+id/bedroom_textview"
        app:layout_constraintTop_toBottomOf="@+id/bedroom_textview" />

    <TextView
        android:id="@+id/bathroom_textview"
        style="@style/textview_style"
        android:text="@string/bathroom"
        app:layout_constraintEnd_toEndOf="@+id/livingroom_textview"
        app:layout_constraintStart_toStartOf="@+id/livingroom_textview"
        app:layout_constraintTop_toBottomOf="@+id/livingroom_textview" />

    <TextView
        android:id="@+id/garage_textview"
        style="@style/textview_style"
        android:text="@string/garage"
        app:layout_constraintEnd_toEndOf="@+id/bathroom_textview"
        app:layout_constraintStart_toStartOf="@+id/bathroom_textview"
        app:layout_constraintTop_toBottomOf="@+id/bathroom_textview" />

    <TextView
        android:id="@+id/television_textview"
        style="@style/textview_style"
        android:text="@string/television"
        app:layout_constraintEnd_toEndOf="@+id/garage_textview"
        app:layout_constraintStart_toStartOf="@+id/garage_textview"
        app:layout_constraintTop_toBottomOf="@+id/garage_textview" />

    <TextView
        android:id="@+id/kitchen_status"
        style="@style/textview_status"
        android:layout_marginEnd="24dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/kitchen_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/kitchen_textview" />

    <TextView
        android:id="@+id/bedroom_status"
        style="@style/textview_status"
        app:layout_constraintBaseline_toBaselineOf="@+id/bedroom_textview"
        app:layout_constraintEnd_toEndOf="@+id/kitchen_status"
        app:layout_constraintStart_toStartOf="@+id/kitchen_status" />

    <TextView
        android:id="@+id/livingroom_status"
        style="@style/textview_status"
        app:layout_constraintBaseline_toBaselineOf="@+id/livingroom_textview"
        app:layout_constraintEnd_toEndOf="@+id/bedroom_status"
        app:layout_constraintStart_toStartOf="@+id/bedroom_status" />

    <TextView
        android:id="@+id/bathroom_status"
        style="@style/textview_status"
        app:layout_constraintBaseline_toBaselineOf="@+id/bathroom_textview"
        app:layout_constraintEnd_toEndOf="@+id/livingroom_status"
        app:layout_constraintStart_toStartOf="@+id/livingroom_status" />

    <TextView
        android:id="@+id/garage_status"
        style="@style/textview_status"
        app:layout_constraintBaseline_toBaselineOf="@+id/garage_textview"
        app:layout_constraintEnd_toEndOf="@+id/bathroom_status"
        app:layout_constraintStart_toStartOf="@+id/bathroom_status" />

    <TextView
        android:id="@+id/television_status"
        style="@style/textview_status"
        app:layout_constraintBaseline_toBaselineOf="@+id/television_textview"
        app:layout_constraintEnd_toEndOf="@+id/garage_status"
        app:layout_constraintStart_toStartOf="@+id/garage_status" />

    <Button
        android:id="@+id/kitchen_button"
        style="@style/button_style"
        android:text="@string/kitchen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artificialsun_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bedroom_button"
        style="@style/button_style"
        android:text="@string/bedroom"
        app:layout_constraintEnd_toEndOf="@+id/kitchen_button"
        app:layout_constraintStart_toStartOf="@+id/kitchen_button"
        app:layout_constraintTop_toBottomOf="@+id/kitchen_button" />

    <Button
        android:id="@+id/livingroom_button"
        style="@style/button_style"
        android:text="@string/livingroom"
        app:layout_constraintEnd_toEndOf="@+id/bedroom_button"
        app:layout_constraintStart_toStartOf="@+id/bedroom_button"
        app:layout_constraintTop_toBottomOf="@+id/bedroom_button" />

    <Button
        android:id="@+id/bathroom_button"
        style="@style/button_style"
        android:text="@string/bathroom"
        app:layout_constraintBaseline_toBaselineOf="@+id/kitchen_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/kitchen_button" />

    <Button
        android:id="@+id/garage_button"
        style="@style/button_style"
        android:text="@string/garage"
        app:layout_constraintEnd_toEndOf="@+id/bathroom_button"
        app:layout_constraintStart_toStartOf="@+id/bathroom_button"
        app:layout_constraintTop_toBottomOf="@+id/bathroom_button" />

    <Button
        android:id="@+id/television_button"
        style="@style/button_style"
        android:text="@string/television"
        app:layout_constraintEnd_toEndOf="@+id/garage_button"
        app:layout_constraintStart_toStartOf="@+id/garage_button"
        app:layout_constraintTop_toBottomOf="@+id/garage_button" />


    <Button
        android:id="@+id/artificialsun_button"
        style="@style/artificial_sun_button"
        android:text="@string/artificialsun"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/television_textview"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/allOn_button"
        style="@style/allbutton_style"
        android:text="@string/all_on"
        app:layout_constraintEnd_toEndOf="@+id/livingroom_button"
        app:layout_constraintStart_toStartOf="@+id/livingroom_button"
        app:layout_constraintTop_toBottomOf="@+id/livingroom_button" />

    <Button
        android:id="@+id/allOff_button"
        style="@style/allbutton_style"
        android:text="@string/all_off"
        app:layout_constraintEnd_toEndOf="@+id/television_button"
        app:layout_constraintStart_toStartOf="@+id/television_button"
        app:layout_constraintTop_toBottomOf="@+id/television_button" />

</androidx.constraintlayout.widget.ConstraintLayout>